fixing accidental text-align: center from previous commit

--- a/style.css
+++ b/style.css
@@ -133,6 +133,9 @@ main .container,
 header .container,
 footer .container {
   background-color: #fff;
+}
+
+footer .container {
   text-align: center;
 }
 
